# bim-ros-integration

./: README.md  cut_wall.py  package.xml  readme.md  setup.cfg  setup.py
config/: param.yaml  rvitz_config.rviz
launch/: visual_launch.py
robot_model/: robot_description2.urdf
robot_model/meshes/: base_link.dae  link1.dae  link2.dae  link3.dae
script/: pkg_launch.sh
slicer/: main.py  main2.py  main3.py  main4.py  main5.py  main6.py
wall_cut/: IFC2OWL.py  cut_wall.py  ifcExport.py  ifc_export.py  main.py  myenv.yml  object0.stl  object1.stl  output.txt  test.py  wall_cut.py
wall_cut/ifc_models/: blank_ifc.ifc  panel1.ifc
wall_cut/utils/: IFC2OWL.py  PDP_TS_01.ttl  ifcExport.py  pdpSCRIPT.py  pdp_Query.py  pdp_Reset.py
wall_cut/utils/data/ifc_models/: Project1.ifc  blank_ifc.ifc
wall_cut/utils/data/ifc_models/input/: panel1.ifc  panel10.ifc  panel11.ifc  panel12.ifc  panel13.ifc  panel14.ifc  panel15.ifc  panel16.ifc  panel17.ifc  panel18.ifc  panel2.ifc  panel3.ifc  panel4.ifc  panel5.ifc  panel6.ifc  panel7.ifc  panel8.ifc  panel9.ifc
wall_cut/utils/data/ifc_models/output/: 01pIQ.trig  01pIQ.ttl  02B5PXJtLA0xYGxwX$.trig  03vZ6aD8b1fuqRVgUovE2k.trig  040j1w_wz9Su1ijQCBcPbC.trig  0Ca9rCHKn4eRa240jKqHHH.trig  0Ft2zDrC1AAAKl1Uzg3ZHN.trig  0JfBbHAG15ygsY6zRAeV9A.trig  0KIW8W0RrFcwRKSSUB7vjM.trig  0KbCjmxH99ih537W6c.trig  0LG2inTXT8pA6eAC7xGX4S.trig  0baegZSLn32g4gLssEMvNB.trig  (+88 more)
wall_cut/utils/data/stl_models/: object0.stl  object1.stl
wall_cut/utils/grasshopper_viewer/: GHSCRIPT.gh  examplePDP.3dm
wall_cut/utils/push/: hereShouldBeAguid_1234.ttl
