<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>slicer</name>
  <version>0.0.0</version>
  <description>A ROS package focusing on the integration of BIM</description>
  <maintainer email="cemre.karaoglan@rwth-aachen.de">cemrekaraoglan</maintainer>
  <license>RWTH Aachen</license>
  
  <exec_depend>rclpy</exec_depend>
  <exec_depend>ament_python</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>tf2_ros</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
